fix: salvando as distribuicoes no bd e fazendo rebalanceamento com base no fracionado + lote padrao.